substantial edits throughout

--- a/icwe19.bib
+++ b/icwe19.bib
@@ -19,9 +19,7 @@
     doi       = "10.1016/J.IS.2017.12.004",
     file      = ":Users/npm65/Documents/myGRID/refs/1-s2.0-S0306437917302260-main.pdf:pdf",
     issn      = "0306-4379",
-    publisher = "Pergamon",
-    url       = "https://www.sciencedirect.com/science/article/pii/S0306437917302260?via{\%}3Dihub"
-}
+    publisher = "Pergamon"}
 @INPROCEEDINGS {Pal2011,
     author        = "Pal, Aditya and Counts, Scott",
     title         = "{Identifying topical authorities in microblogs}",
@@ -39,14 +37,11 @@
     title     = "{Recruiting from the Network: Discovering Twitter Users Who Can Help Combat Zika Epidemics}",
     booktitle = "Web Engineering: 17th International Conference, ICWE 2017, Rome, Italy, June 5-8, 2017, Proceedings",
     year      = "2017",
-    editor    = "Cabot, Jordi and {De Virgilio}, Roberto and Torlone, Riccardo",
     pages     = "437--445",
     address   = "Roma, Italy",
     publisher = "Springer International Publishing",
     doi       = "10.1007/978-3-319-60131-1\_30",
-    file      = ":Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Missier et al. - 2017 - Recruiting from the Network Discovering Twitter Users Who Can Help Combat Zika Epidemics(2).pdf:pdf",
-    isbn      = "978-3-319-60131-1",
-    url       = "http://dx.doi.org/10.1007/978-3-319-60131-1{\_}30"
+    isbn      = "978-3-319-60131-1"
 }
 @INPROCEEDINGS {Bizid:2015:PUD:2808797.2809411,
     author    = "Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques",
@@ -59,8 +54,7 @@
     publisher = "ACM",
     doi       = "10.1145/2808797.2809411",
     isbn      = "978-1-4503-3854-7",
-    keywords  = "Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking",
-    url       = "http://doi.acm.org/10.1145/2808797.2809411"
+    keywords  = "Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking"
 }
 @ARTICLE {IJoC1246,
     author   = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
@@ -70,8 +64,7 @@
     volume   = "5",
     number   = "0",
     abstract = "This article details the networked production and dissemination of news on Twitter during snapshots of the 2011 Tunisian and Egyptian Revolutions as seen through information flows—sets of near-duplicate tweets—across activists, bloggers, journalists, mainstream media outlets, and other engaged participants. We differentiate between these user types and analyze patterns of sourcing and routing information among them. We describe the symbiotic relationship between media outlets and individuals and the distinct roles particular user types appear to play. Using this analysis, we discuss how Twitter plays a key role in amplifying and spreading timely information across the globe.",
-    issn     = "1932-8036",
-    url      = "https://ijoc.org/index.php/ijoc/article/view/1246"
+    issn     = "1932-8036"
 }
 @ARTICLE {Hermida2014,
     author   = "Hermida, Alfred and Lewis, Seth C. and Zamith, Rodrigo",
@@ -85,8 +78,7 @@
     doi      = "10.1111/jcc4.12074",
     file     = ":Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Hermida, Lewis, Zamith - 2014 - Sourcing the Arab Spring A Case Study of Andy Carvin's Sources on Twitter During the Tunisian and Egypti.pdf:pdf",
     issn     = "10836101",
-    keywords = "10,1111,12074,a social media strategist,andy carvin,arab spring,at npr,carvin,case study on the,doi,during key periods of,egyptian uprisings,gatekeeping,jcc4,journalism,national public radio,s andy carvin on,sourcing,the 2011 tunisian and,this paper presents a,twitter,use of sources by",
-    url      = "http://doi.wiley.com/10.1111/jcc4.12074"
+    keywords = "10,1111,12074,a social media strategist,andy carvin,arab spring,at npr,carvin,case study on the,doi,during key periods of,egyptian uprisings,gatekeeping,jcc4,journalism,national public radio,s andy carvin on,sourcing,the 2011 tunisian and,this paper presents a,twitter,use of sources by"
 }
 @ARTICLE {Overbey2013,
     author   = "Overbey, Lucas A and Greco, Benjamin and Paribello, Christopher and Jackson, Terresa",
@@ -99,8 +91,7 @@
     month    = "dec",
     abstract = "With the recent explosion in availability and use of internet social media, contentious politics is currently undergoing a shift in nature. This shift has resulted in technologically savvy groups of people that utilize these new communication resources to quickly disseminate ideas, influence, news, plans, and opinions in near real time to interested, physically disconnected communities of interest. Here, we investigate activity on Twitter during the 2011 protests and revolution in Egypt by performing an analysis of the structure of direct communications and developing a model based on these analyses. We first compare the network representing the declared friends and followers with the underlying direct communication network based on mentions and retweets, performing an evaluation using goodness of model fits, and including the appropriateness of scale-free assumptions. We also examine this underlying network with an analysis of common structural tendencies by employing exponential random graph models. The network structure of locally focused Twitter communities surrounding contentious political networks tend to have a relatively high density, and a propensity for mutual, transitive, and k-star structures, suggesting that both diffusion of information and back-and-forth communication take place frequently in such networks. More global Twitter networks possess properties corroborative of scale-freeness; however, even locally bounded networks show an evidence of preferential attachment. Based on these observations, we introduce a model to automatically ascertain prominent Twitter users within networks centered on contentious politics. We employ a form of the alpha centrality, which can capably take into account directionality and exogenous prominence, and has ties to non-conservative diffusion. Results indicate a model successful at automatically identifying users that are active and prominent within a given community that agrees well with heuristics and is comparable to other similar models. The model also has advantages over others based on its tunability and robustness in the presence of incomplete data.",
     doi      = "10.1007/s13278-013-0134-8",
-    issn     = "1869-5469",
-    url      = "https://doi.org/10.1007/s13278-013-0134-8"
+    issn     = "1869-5469"
 }
 @ARTICLE {Bonacich2001,
     author    = "Bonacich, Phillip and Lloyd, Paulette",
@@ -115,8 +106,7 @@
     doi       = "10.1016/S0378-8733(01)00038-7",
     file      = ":Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Bonacich, Lloyd - 2001 - Eigenvector-like measures of centrality for asymmetric relations(2).pdf:pdf",
     issn      = "0378-8733",
-    publisher = "North-Holland",
-    url       = "https://www.sciencedirect.com/science/article/pii/S0378873301000387"
+    publisher = "North-Holland"
 }
 @ARTICLE {Kardara2015,
     author   = "Kardara, Magdalini and Papadakis, George and Papaoikonomou, Athanasios and Tserpes, Konstantinos and Varvarigou, Theodora",
@@ -127,11 +117,8 @@
     number   = "1",
     pages    = "226--252",
     abstract = "Influence theories constitute formal models that identify those individuals that are able to affect and guide their peers through their activity. There is a large body of work on developing such theories, as they have important applications in viral marketing, recommendations, as well as information retrieval. Influence theories are typically evaluated through a manual process that cannot scale to data voluminous enough to draw safe, representative conclusions. To overcome this issue, we introduce in this paper a formalized framework for large-scale, automatic evaluation of topic-specific influence theories that are specialized in Twitter. Basically, it consists of five conjunctive conditions that are indicative of real influence exertion: the first three determine which influence theories are compatible with our framework, while the other two estimate their relative effectiveness. At the core of these two conditions lies a novel metric that assesses the aggregate sentiment of a group of users and allows for estimating how close the behavior of influencers is to that of the entire community. We put our framework into practice using a large-scale test-bed with real data from 75 Twitter communities. In order to select the theories that can be employed in our analysis, we introduce a generic, two-dimensional taxonomy that elucidates their functionality. With its help, we ended up with five established topic-specific theories that are applicable to our settings. The outcomes of our analysis reveal significant differences in their performance. To explain them, we introduce a novel methodology for delving into the internal dynamics of the groups of influencers they define. We use it to analyze the implications of the selected theories and, based on the resulting evidence, we propose a novel partition of influence theories in three major categories with divergent performance.",
-    doi      = "https://doi.org/10.1016/j.ipm.2014.06.002",
-    file     = ":Users/npm65/Documents/myGRID/refs/1-s2.0-S0306457314000491-main.pdf:pdf",
     issn     = "0306-4573",
-    keywords = "Evaluation framework,Social influence,Topic communities",
-    url      = "http://www.sciencedirect.com/science/article/pii/S0306457314000491"
+    keywords = "Evaluation framework,Social influence,Topic communities"
 }
 @INPROCEEDINGS {Cha2010MeasuringUI,
     author    = "Meeyoung Cha and Hamed Haddadi and Fabr{\'i}cio Benevenuto and Krishna P. Gummadi",
@@ -150,7 +137,6 @@
     publisher = "Association for Computational Linguistics",
     location  = "Montreal, Canada",
     numpages  = "9",
-    url       = "http://dl.acm.org/citation.cfm?id=2390374.2390379",
     acmid     = "2390379"
 }
 @ARTICLE {MATIC2011,
@@ -182,11 +168,7 @@
     pages           = "338--349",
     abstract        = "Twitter as a new form of social media can potentially contain much useful information, but content analysis on Twitter has not been well studied. In particular, it is not clear whether as an information source Twitter can be simply regarded as a faster news feed that covers mostly the same information as traditional news media. In This paper we empirically compare the content of Twitter with a traditional news medium, New York Times, using unsupervised topic modeling. We use a Twitter-LDA model to discover topics from a representative sample of the entire Twitter. We then use text mining techniques to compare these Twitter topics with topics from New York Times, taking into consideration topic categories and types. We also study the relation between the proportions of opinionated tweets and retweets and topic categories and types. Our comparisons show interesting and useful findings for downstream IR or DM applications.",
     doi             = "10.1007/978-3-642-20161-5\_34",
-    isbn            = "978-3-642-20160-8",
-    keywords        = "{\#}dengue,{\#}zika,microblogging,topic modeling,twitter",
-    mendeley-groups = "Twitter,Text Classification",
-    mendeley-tags   = "{\#}dengue,{\#}zika",
-    url             = "http://dl.acm.org/citation.cfm?id=1996889.1996934"
+    isbn            = "978-3-642-20160-8"
 }
 @INPROCEEDINGS {Bizid:2015,
     author    = "Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques",
@@ -199,9 +181,7 @@
     publisher = "ACM",
     doi       = "10.1145/2808797.2809411",
     file      = ":Users/npm65/Documents/myGRID/refs/p500{\_}bizid.pdf:pdf",
-    isbn      = "978-1-4503-3854-7",
-    keywords  = "Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking",
-    url       = "http://doi.acm.org/10.1145/2808797.2809411"
+    isbn      = "978-1-4503-3854-7"
 }
 @ARTICLE {Poell2014,
     author    = "Poell, Thomas",
@@ -215,8 +195,7 @@
     annote    = "doi: 10.1080/1369118X.2013.812674",
     doi       = "10.1080/1369118X.2013.812674",
     issn      = "1369-118X",
-    publisher = "Routledge",
-    url       = "https://doi.org/10.1080/1369118X.2013.812674"
+    publisher = "Routledge"
 }
 @ARTICLE {Lotan2011,
     author  = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
@@ -225,8 +204,7 @@
     year    = "2011",
     volume  = "5",
     number  = "0",
-    issn    = "1932-8036",
-    url     = "https://ijoc.org/index.php/ijoc/article/view/1246"
+    issn    = "1932-8036"
 }
 @ARTICLE {RIQUELME2016949,
     author   = "Fabian Riquelme and Pablo Gonzalez-Cantergiani",
@@ -237,9 +215,7 @@
     number   = "5",
     pages    = "949 - 975",
     issn     = "0306-4573",
-    doi      = "10.1016/j.ipm.2016.04.003",
-    url      = "http://www.sciencedirect.com/science/article/pii/S0306457316300589",
-    keywords = "Twitter, User influence, Opinion leader, Centrality measure, PageRank"
+    doi      = "10.1016/j.ipm.2016.04.003"
 }
 @INPROCEEDINGS {Barros2018,
     author        = "Barros, H. Pedro and Lima, Bruno G. C. and Crispim, Felipe C. and Vieira, Tiago and Missier, Paolo and Fonseca, Baldoino",
@@ -257,10 +233,7 @@
     volume   = "75",
     pages    = "26 - 42",
     issn     = "0306-4379",
-    doi      = "10.1016/j.is.2018.02.003",
-    url      = "http://www.sciencedirect.com/science/article/pii/S030643791730618X",
-    keywords = "Dengue,Mosquito,Social media,Surveillance,Tweets"
-
+    doi      = "10.1016/j.is.2018.02.003"
 }
 @ARTICLE {doi:10.1080/14742830701497277,
     author    = "Chris Bobel",
@@ -271,9 +244,7 @@
     number    = "2",
     pages     = "147-159",
     publisher = "Routledge",
-    doi       = "10.1080/14742830701497277",
-    url       = "https://doi.org/10.1080/14742830701497277		",
-    eprint    = "https://doi.org/10.1080/14742830701497277	"
+    doi       = "10.1080/14742830701497277"
 }
 @ARTICLE {Martin2007,
     author  = "Roger L Martin and Sally Osberg ",
@@ -281,8 +252,7 @@
     journal = "Stanford Social Innovation Review",
     year    = "2007",
     volume  = "5",
-    month   = "01",
-    url     = "https://www.researchgate.net/publication/253411658_Social_Entrepreneurship_The_Case_for_Definition	"
+    month   = "01"
 }
 @ARTICLE {doi:10.1080/1369118X.2013.812674,
     author    = "Thomas Poell ",
@@ -293,9 +263,7 @@
     number    = "6",
     pages     = "716-731",
     publisher = "Routledge",
-    doi       = "10.1080/1369118X.2013.812674",
-    url       = "https://doi.org/10.1080/1369118X.2013.812674",
-    eprint    = "https://doi.org/10.1080/1369118X.2013.812674"
+    doi       = "10.1080/1369118X.2013.812674"
 }
 @ARTICLE {Youmans2012,
     author  = "Youmans, William Lafi and York, Jillian C.",
@@ -305,9 +273,7 @@
     volume  = "62",
     number  = "2",
     pages   = "315-329",
-    doi     = "10.1111/j.1460-2466.2012.01636.x",
-    url     = "http://dx.doi.org/10.1111/j.1460-2466.2012.01636.x",
-    eprint  = "/oup/backfile/content_public/journal/joc/62/2/10.1111_j.1460-2466.2012.01636.x/3/jjnlcom0315.pdf"
+    doi     = "10.1111/j.1460-2466.2012.01636.x"
 }
 @ARTICLE {BIZID2018173,
     author   = "Imen Bizid and Nibal Nayef and Patrice Boursier and Antoine Doucet",
@@ -316,10 +282,7 @@
     year     = "2018",
     volume   = "78",
     pages    = "173 - 188",
-    issn     = "0306-4379",
-    doi      = "https://doi.org/10.1016/j.is.2017.12.004",
-    url      = "http://www.sciencedirect.com/science/article/pii/S0306437917302260",
-    keywords = "Information retrieval from microblogs, Prominent users prediction, User behavior modeling, Phase-temporal representation"
+    issn     = "0306-4379"
 }
 @INPROCEEDINGS {Coscia:2012:DLD:2339530.2339630,
     author    = "Coscia, Michele and Rossetti, Giulio and Giannotti, Fosca and Pedreschi, Dino",
@@ -333,7 +296,6 @@
     isbn      = "978-1-4503-1462-6",
     location  = "Beijing, China",
     numpages  = "9",
-    url       = "http://doi.acm.org/10.1145/2339530.2339630",
     doi       = "10.1145/2339530.2339630",
     acmid     = "2339630",
     keywords  = "community discovery, complex networks, data mining"
@@ -348,9 +310,7 @@
     pages     = "1118--1123",
     doi       = "10.1073/pnas.0706851105",
     publisher = "National Academy of Sciences",
-    issn      = "0027-8424",
-    url       = "http://www.pnas.org/content/105/4/1118",
-    eprint    = "http://www.pnas.org/content/105/4/1118.full.pdf"
+    issn      = "0027-8424"
 }
 @ARTICLE {PhysRevE.70.066111,
     author    = "Clauset, Aaron and Newman, M. E. J. and Moore, Cristopher",
@@ -363,8 +323,7 @@
     issue     = "6",
     numpages  = "6",
     publisher = "American Physical Society",
-    doi       = "10.1103/PhysRevE.70.066111",
-    url       = "https://link.aps.org/doi/10.1103/PhysRevE.70.066111"
+    doi       = "10.1103/PhysRevE.70.066111"
 }
 @ARTICLE {FM4366,
     author  = "Kalev Leetaru and Shaowen Wang and Guofeng Cao and Anand Padmanabhan and Eric Shook",
@@ -374,8 +333,7 @@
     volume  = "18",
     number  = "5",
     issn    = "13960466",
-    doi     = "10.5210/fm.v18i5.4366",
-    url     = "https://journals.uic.edu/ojs/index.php/fm/article/view/4366"
+    doi     = "10.5210/fm.v18i5.4366"
 }
 @ARTICLE {LU2016,
     author  = "L{\"u}, Linyuan and Zhou, Tao and Zhang, Qian-Ming and Stanley, H. Eugene",
@@ -386,7 +344,6 @@
     pages   = "10168",
     month   = "Jan",
     day     = "12",
-    url     = "https://doi.org/10.1038/ncomms10168",
     doi     = "10.1038/ncomms10168"
 }
 @INBOOK {Fisher2017,
@@ -399,6 +356,15 @@
     pages     = "1--19",
     abstract  = "Networks describe a range of social, biological and technical phenomena. An important property of a network is its degree correlation or assortativity, describing how nodes in the network associate based on their number of connections. Social networks are typically thought to be distinct from other networks in being assortative (possessing positive degree correlations); well-connected individuals associate with other well-connected individuals, and poorly connected individuals associate with each other. We review the evidence for this in the literature and find that, while social networks are more assortative than non-social networks, only when they are built using group-based methods do they tend to be positively assortative. Non-social networks tend to be disassortative. We go on to show that connecting individuals due to shared membership of a group, a commonly used method, biases towards assortativity unless a large enough number of censuses of the network are taken. We present a number of solutions to overcoming this bias by drawing on advances in sociological and biological fields. Adoption of these methods across all fields can greatly enhance our understanding of social networks and networks in general.",
     isbn      = "978-3-319-53420-6",
-    doi       = "10.1007/978-3-319-53420-6\_1",
-    url       = "https://doi.org/10.1007/978-3-319-53420-6\_1"
+    doi       = "10.1007/978-3-319-53420-6\_1"
+}
+@ARTICLE {INFOMAP,
+    author  = "Rosvall, Martin and T Bergstrom, Carl",
+    title   = "Maps of Random Walks on Complex Networks Reveal Community Structure",
+    journal = "Proceedings of the National Academy of Sciences of the United States of America",
+    year    = "2008",
+    volume  = "105",
+    pages   = "1118-23",
+    month   = "02",
+    doi     = "10.1073/pnas.0706851105"
 }
